--- a/product-service/package.json
+++ b/product-service/package.json
@@ -8,11 +8,13 @@
     "deploy": "sls deploy --verbose"
   },
   "dependencies": {
+    "pg": "^8.7.1",
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/node": "^10.12.18",
+    "@types/pg": "^8.6.4",
     "@types/serverless": "^1.72.5",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless-webpack": "^5.2.0",
