--- a/product-service/package.json
+++ b/product-service/package.json
@@ -8,6 +8,7 @@
     "deploy": "sls deploy --verbose"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "pg": "^8.7.1",
     "source-map-support": "^0.5.10"
   },
