--- a/import-service/package.json
+++ b/import-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "product-service",
+  "name": "import-service",
   "version": "1.0.0",
   "description": "Serverless webpack example using Typescript",
   "main": "main.ts",
@@ -8,14 +8,17 @@
     "deploy": "sls deploy --verbose"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.49.0",
+    "@aws-sdk/client-sqs": "^3.49.0",
+    "@aws-sdk/s3-request-presigner": "^3.49.0",
+    "aws-sdk": "^2.1068.0",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.0",
-    "pg": "^8.7.1",
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/node": "^10.12.18",
-    "@types/pg": "^8.6.4",
     "@types/serverless": "^1.72.5",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless-webpack": "^5.2.0",
