--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -35,6 +35,12 @@ provider:
   stage: dev
   region: eu-west-1
 
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action: "sns:*"
+      Resource:
+        - "arn:aws:sns:eu-west-1:531502730024:shop-topic"
+
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
 #    - Effect: "Allow"
